--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,7 +37,7 @@ body {
 
 .jump {
 
-    animation: jump 500ms ease-out;
+    animation: jump 2000ms ease-out;
 
 }
 
@@ -49,9 +49,17 @@ body {
 
 @media (max-width: 768px) {
 
-   .game-board{
-       
-   }
+    .pipe {
+        width: 60px;
+        animation: pipe-animation 1s infinite linear;
+    }
+
+    .mario {
+
+        width: 80px;
+    }
+
+    
 }
 
 
